samples/_failures_safe/1761633321_844989_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b5ef48d.c: In function ‘main’:
./samples/SAFE/__tmp_7b5ef48d.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
